--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   },
   "devDependencies": {
     "@swc/core": "^1.3.96",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
     "nodemon": "^3.0.1",
@@ -19,6 +21,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
