--- a/server/package.json
+++ b/server/package.json
@@ -3,21 +3,19 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "license": "MIT",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon --swc src/index.ts",
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node ./dist/index.js"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.96",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
