Add Node.js version requirement and update tsconfig.json

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,16 +1,10 @@
 {
+  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "module": "NodeNext",
-    "target": "ES2022",
     "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true
+    "rootDir": "src"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "build"],
-  "ts-node": {
-    "esm": true
-  }
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
