--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "license": "MIT",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node ./dist/index.js"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.2",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
