--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
+    "prisma-dbml-generator": "^0.10.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
