--- a/front/package.json
+++ b/front/package.json
@@ -4,21 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predev": "yarn supabase:gen:types",
     "dev": "vite",
-    "prebuild": "yarn supabase:gen:types",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "supabase:gen:types": "supabase gen types typescript --project-id giaxdabaumxzowpnafox > src/services/database.types.ts"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.2",
-    "@supabase/auth-ui-react": "^0.4.6",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.38.4",
-    "@supabase/ui": "^0.36.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
