--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.5",
