--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.8.1",
+    "@tanstack/react-query-devtools": "^5.8.1",
     "axios": "^1.6.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
