--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-devtools": "^5.8.1",
     "axios": "^1.6.1",
+    "clsx": "^2.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
