--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
