--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,12 @@
   },
   "scripts": {
     "build": "tsc",
+    "start": "node ./dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start": "node ./dist/index.js"
+    "seed": "npx prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node ./src/database/seed.ts"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
