--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "prisma": "^5.5.2",
+    "resend": "^2.0.0",
     "zod": "^3.22.4"
   }
 }
