--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "export NODE_ENV=development && ts-node-dev --respawn --transpile-only src/index.ts",
     "seed": "npx prisma db seed"
   },
   "prisma": {
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
+    "@types/node-cron": "^3.0.11",
     "prisma-dbml-generator": "^0.10.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -38,6 +39,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "prisma": "^5.5.2",
     "resend": "^2.0.0",
     "zod": "^3.22.4"
