--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "start": "node ./dist/index.js",
     "dev": "export NODE_ENV=development && ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:debug": "export NODE_ENV=debug && ts-node-dev --inspect --respawn --transpile-only src/index.ts",
     "seed": "npx prisma db seed"
   },
   "prisma": {
