--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.0.0",
+    "victory": "^36.7.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
