--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "start": "node ./dist/index.js",
     "dev": "export NODE_ENV=development && ts-node-dev --respawn --transpile-only src/index.ts",
     "dev:debug": "export NODE_ENV=debug && ts-node-dev --inspect --respawn --transpile-only src/index.ts",
-    "seed": "npx prisma db seed"
+    "seed": "npx prisma db seed",
+    "test": "export NODE_ENV=test && jest"
   },
   "prisma": {
     "seed": "ts-node ./src/database/seed.ts"
@@ -23,16 +24,21 @@
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
     "@types/node-cron": "^3.0.11",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "prisma-dbml-generator": "^0.10.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.7.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -42,7 +48,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
-    "prisma": "^5.5.2",
+    "prisma": "^5.7.1",
     "resend": "^2.0.0",
     "zod": "^3.22.4"
   }
